<resources>
    <string name="app_name">Colosseum</string>
    <string name="id">아이디</string>
    <string name="hint_email">이메일 양식으로 입력</string>
    <string name="password">비밀번호</string>
    <string name="hint_password">비밀번호 입력</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="login_success_message">로그인 성공</string>
    <string name="auto_login">자동 로그인</string>
    <string name="email_text">이메일</string>
    <string name="email_hint">이메일</string>
    <string name="email_dupe_check_text">중복 확인을 해주세요</string>
    <string name="email_is_not_dupe_text">사용 가능한 이메일입니다.</string>
    <string name="email_is_dupe_text">이미 사용중인 이메일입니다.</string>
    <string name="dupe_check_btn">중복확인</string>
    <string name="pw_text">비밀번호</string>
    <string name="pw_hint">특수문자를 포함한 8자리</string>
    <string name="pw_confirm_text">비밀번호 확인</string>
    <string name="sign_up_next_btn">다음</string>
    <string name="change_profile_img">프로필 이미지 변경</string>
</resources>
